--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-app
+  name: webappservice
 spec:
   type: NodePort
   ports:
-  - port: 80
-    nodePort: 30036
-    targetPort: 8080
+    - port: 80
+      targetPort: 80
   selector:
-    app: sample-app
+    app: webapp
